Fix alignment of manufacture modal and add constants.
closes #579

--- a/frontend/src/components/shared/popUps/categoryModal/categoryModal.scss
+++ b/frontend/src/components/shared/popUps/categoryModal/categoryModal.scss
@@ -142,3 +142,12 @@
     }
   }
 }
+
+@media only screen and (max-width: 480px) {
+  .category-modal {
+    .MuiDialogActions-root {
+      padding-left: 21px;
+      padding-right: 23px;
+    }
+  }
+}
